cleancode-solid/src/main/java/io/pello/cleancode/samples/solid/isp/kernelsample/bad/Device.java
package io.pello.cleancode.samples.solid.isp.kernelsample.bad;

public abstract class Device {

}
